Bug 1114357 - Firefox does not understand XF86 ZoomIn and ZoomOut keys. r=masayuki